Fix carousel container positioning - images not showing

--- a/css/main.css
+++ b/css/main.css
@@ -407,7 +407,9 @@ body {
 
 /* Image Carousel */
 .card-image-carousel {
-    position: relative;
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
 }
